--- a/notebooks/Problem 060.ipynb
+++ b/notebooks/Problem 060.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pair_set_max_len = 4\n",
-    "max_digits = 3\n",
+    "pair_set_max_len = 5\n",
+    "max_digits = 4\n",
     "prime_max_digits = 2 * max_digits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +93,47 @@
     "    for ref_key, ref_value in concat_prime_dict.items():\n",
     "        for key, value in old_dict.items():\n",
     "            if not ref_key[0] in key:\n",
-    "                new_key = key + ref_key\n",
+    "                new_key = tuple(sorted(list(key + ref_key)))\n",
     "                if not new_key in new_dict:\n",
     "                    new_value = ref_value.intersection(value)\n",
-    "                    if len(new_value) + len(new_key) >= pair_set_max_len:\n",
+    "                    if len(new_value) >= pair_set_max_len:\n",
     "                        new_dict[new_key] = new_value\n",
-    "    print(len(new_dict))\n",
-    "    old_dict, new_dict = new_dict, {}\n",
-    "\n",
-    "\n",
-    "    "
+    "    old_dict, new_dict = new_dict, {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26033\n"
+     ]
+    }
+   ],
+   "source": [
+    "sums = [sum(x) for x in old_dict.values()]\n",
+    "print(min(sums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(13, 5197, 5701, 6733, 8389): {5701, 8389, 5197, 13, 6733}}\n"
+     ]
+    }
+   ],
+   "source": [
+    " print(old_dict)"
    ]
   },
   {
